# monitoring_tg-bot

./: .env.example  .gitignore  Makefile  config.example.yaml  pyproject.toml
bot/: __main__.py  config.py
bot/checks/: base.py  file_check.py  gpu_check.py  http_check.py  jira_check.py  subprocess_check.py
bot/db/: engine.py  models.py  queries.py
bot/formatters/: telegram.py
bot/handlers/: gpu.py  health.py  menu.py  notifications.py  start.py  tasks.py  users.py
bot/middlewares/: auth.py
bot/notifications/: engine.py
bot/tasks/: base.py  documentation.py  registry.py
deploy/: start_tmux.sh
tests/: conftest.py  test_checks.py  test_db.py  test_notifications.py
