[project]
name = "server-monitor-bot"
version = "0.1.0"
description = "Telegram bot for remote server monitoring (NVIDIA DGX Spark)"
requires-python = ">=3.10"

dependencies = [
    "aiogram>=3.12,<4.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
